--- a/D-TECT/src/main/resources/application.properties
+++ b/D-TECT/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://project-db-campus.smhrd.com:3307/campus_25SW_LI_p3_4?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username = campus_25SW_LI_p3_4
 spring.datasource.password = smhrd4
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
