--- a/D-TECT/src/main/resources/application.properties
+++ b/D-TECT/src/main/resources/application.properties
@@ -23,9 +23,14 @@ spring.servlet.multipart.max-request-size = 20MB
 
 file.upload-dir = /home/git/uploads
 
-# Spring Boot 에서 JSP 사용하기 위한 설정
-
-spring.mvc.view.prefix=/WEB-INF/
-spring.mvc.view.suffix=.jsp
-
 app.aes.secret=pathfinder
+
+# 이메일 인등을 위한 설정
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wfos3241@gmail.com
+spring.mail.password=xcleevqbbepkctqh
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.test-connection=false
