--- a/D-TECT/src/main/resources/application.properties
+++ b/D-TECT/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.servlet.multipart.max-file-size = 10MB
 # 전체 파일 용량 제한
 spring.servlet.multipart.max-request-size = 20MB
 
-file.upload-dir = /home/git/uploads
+file.upload-dir = /uploads
 
 app.aes.secret=pathfinder
 
