--- a/D-TECT/src/main/resources/application.properties
+++ b/D-TECT/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=D-TECT
 
-# propertiesë key = value
+# properties key = value
 
 server.port = 8081
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://project-db-campus.smhrd.com:3307/campus_25SW_LI_p3_4?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username = campus_25SW_LI_p3_4
 spring.datasource.password = smhrd4
+
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
@@ -21,10 +22,16 @@ spring.servlet.multipart.max-file-size = 10MB
 # 전체 파일 용량 제한
 spring.servlet.multipart.max-request-size = 20MB
 
-file.upload-dir = /home/git/uploads
-
-# Spring Boot 에서 JSP 사용하기 위한 설정
-
-
+file.upload-dir = /uploads
 
 app.aes.secret=pathfinder
+
+# 이메일 인등을 위한 설정
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wfos3241@gmail.com
+spring.mail.password=xcleevqbbepkctqh
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.test-connection=false
