feat : gmail, 구글, 카카오 인증정보 첨부

--- a/D-TECT/src/main/resources/application.properties
+++ b/D-TECT/src/main/resources/application.properties
@@ -29,24 +29,24 @@ app.aes.secret=pathfinder
 # ì´ë©ì¼ ì¸ë±ì ìí ì¤ì 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${GMAIL_USERNAME}
-spring.mail.password=${GMAIL_SEC_PASSWORD}
+spring.mail.username=wfos3241@gmail.com
+spring.mail.password=xcleevqbbepkctqh
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.test-connection=false
 
 # ===== Google =====
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=445495722711-50nu2eed20a2vuoi18mqd1idmrs7p069.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/login/oauth2/authorization/google
 spring.security.oauth2.client.registration.google.client-name=Google
 # provider는 구글 기본 제공 → 별도 provider.* 설정 불필요
 
 # ===== Kakao (커스텀 Provider) =====
-spring.security.oauth2.client.registration.kakao.client-id=${KAKAO_CLIENT_ID}
-spring.security.oauth2.client.registration.kakao.client-secret=${KAKAO_CLIENT_SECRET}  # 없으면 빈값
+spring.security.oauth2.client.registration.kakao.client-id=acb9cc7d8db1a6e6ec821b1a52e99506
+spring.security.oauth2.client.registration.kakao.client-secret=AXd7Ba8rJqpK4s6rU8BbXWqPeAfAjRxN  # 없으면 빈값
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8081/login/oauth2/authorization/kakao
