--- a/D-TECT/src/main/resources/application.properties
+++ b/D-TECT/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=D-TECT
+spring.config.import=optional:file:./D-TECT/secrets.properties
 
 # properties key = value
 
@@ -13,20 +14,20 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
-# íì¼ ìë¡ë ì¤ì 
+# 파일 업로드 설정
 spring.servlet.multipart.enabled = true
 
-# íëì íì¼ ì©ë ì í
+# 하나의 파일 용량 제한
 spring.servlet.multipart.max-file-size = 10MB
 
-# ì ì²´ íì¼ ì©ë ì í
+# 전체 파일 용량 제한
 spring.servlet.multipart.max-request-size = 20MB
 
 file.upload-dir = /uploads
 
 app.aes.secret=pathfinder
 
-# ì´ë©ì¼ ì¸ë±ì ìí ì¤ì 
+# 이메일 연동을 위한 설정
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${GMAIL_USERNAME}
@@ -58,5 +59,7 @@ spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/o
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
+spring.mail.properties.mail.debug=true
+logging.level.org.springframework.mail=DEBUG
 # (프록시/로드밸런서 뒤에서 baseUrl 계산 오류 날 때 권장)
 # server.forward-headers-strategy=native
